CMS-8269 : Fixed double scroll on comments view dialog.

--- a/WebUI/war/css/perc_dashboard.css
+++ b/WebUI/war/css/perc_dashboard.css
@@ -469,5 +469,5 @@ body {
 }
 
 #perc-gadget-comments-viewComments-frame{
-    height: 492.5px !important;
+    height: 496.5px !important;
 }
